[package]
name = "conditional_commands"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ecs", "games"]
categories = ["game-development"]
repository = "https://github.com/ickshonpe/conditional_commands"
description = "bevy ecs extension traits"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", default-features = false }