[package]
name = "conditional_commands"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ecs", "games"]
categories = ["game-development"]
repository = "https://github.com/ickshonpe/conditional_commands"
description = "Bevy Commands extension"

[dependencies]
bevy = { version = "0.9.0", default-features = false }